      data be buffered in memory. (Robert Collins)

    * New parameter on ``bzrlib.transport.Transport.readv``
      ``adjust_for_latency`` which changes readv from returning strictly the
      requested data to inserted return larger ranges and in forward read order
      to reduce the effect of network latency. (Robert Collins)


bzr 0.90 2007-08-??
===================

  IMPROVEMENTS:

    * Documentation is now organized into multiple directories with a level
      added for different languages or locales. Added the Mini Tutorial
      and Quick Start Summary (en) documents from the Wiki, improving the
      content and readability of the former. Formatted NEWS as Release Notes
      complete with a Table of Conents, one heading per release. Moved the
      Developer Guide into the main document catalog and provided a link
      from the developer document catalog back to the main one.
      (Ian Clatworthy, Sabin Iacob, Alexander Belchenko)


  API CHANGES:

    * The static convenience method ``BzrDir.create_repository``
      is deprecated.  Callers should instead create a ``BzrDir`` instance
      and call ``create_repository`` on that.  (Martin Pool)

bzr 0.90rc1 2007-08-14
======================

  BUGFIXES:

    * ``bzr init`` should connect to the remote location one time only.  We
      have been connecting several times because we forget to pass around the
      Transport object. This modifies ``BzrDir.create_branch_convenience``,
      so that we can give it the Transport we already have.
      (John Arbash Meinel, Vincent Ladeuil, #111702)

    * Get rid of sftp connection cache (get rid of the FTP one too).
      (Vincent Ladeuil, #43731)

    * bzr branch {local|remote} remote don't try to create a working tree
      anymore.
      (Vincent Ladeuil, #112173)

    * All identified multiple connections for a single bzr command have been
      fixed. See bzrlib/tests/commands directory.
      (Vincent Ladeuil)
