@@ -82,6 +82,10 @@ IN DEVELOPMENT
       requested data to inserted return larger ranges and in forward read order
       to reduce the effect of network latency. (Robert Collins)
 
+    * ``bzrlib.transport.Transport.put_file`` now returns the number of bytes
+      put by the method call, to allow avoiding stat-after write or
+      housekeeping in callers. (Robert Collins)
+
 
 bzr 0.90 2007-08-??
 ===================
